--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -1,22 +1,31 @@
 .longe-bordas{
     background-color: #FFA6A9;
+    margin: 20px 0px 20px 20px
+    
   }
   
   .afastado{
+    display: block;
     background-color: #77C0ED;
+    margin: 200px 200px 200px 200px
   }
   .alto{
     background-color: #C3E887;
+    height: 300px;
   }
   
   .largo{
   background-color: #FFE396;
+  width: 500px;
   }
   
   .bordado{
     background-color: #AF9BCC;
+    border: solid black 1px;
+    margin: 550px;
   }
   
   .sumido{
+    display: none;
    
   }
