--- a/exercicio3/style.css
+++ b/exercicio3/style.css
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 header{
   
@@ -9,17 +10,22 @@ header{
 section{
   float: left;
 /*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
-  width: 840px;
+  width: 70%;
   padding: 40px;
+  
 }
 
 aside{
   float:right;
  /*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
-  padding: 20px;
-  width: 340px;
+  padding: 0;
+  width: 20%;
 }
 
 article{
   margin: 10px 0;
+}
+
+main{
+  font-family: Arial, Helvetica, sans-serif;
 }
